--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,12 +72,29 @@ section.container {
 }
 
 .screenshot {
-    max-width: 200px;
+    max-width: 400px;
     margin: 15px;
+    border-radius: 5px;
+}
+
+.screenshot:hover {
+    scale: 1.5;
+    transition: ease-in .5s;
+    box-shadow: 5px 5px 10px white;
 }
 
 .vid {
-    max-width: 250px;
+    max-width: 600px;
+    margin-top: 0;
+}
+
+.media {
+    margin-top: 0;
+}
+
+.credit {
+    color: maroon;
+    margin-top: 20px;
 }
 
 .video {
