--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,12 +61,26 @@ section.container {
   max-width: 270px;
 }
 
+.logo2 {
+  margin: 20px;
+  max-width: 150px;
+  border-radius: 50%;
+}
+
 .nav a {
   font-size: larger;
 }
 
 .nav li {
   margin-top: 10px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
 }
 
 .intro {
